feat: add a prototype of the text classification solution

--- a/src/requirements.in
+++ b/src/requirements.in
@@ -1,4 +1,4 @@
-kedro
+kedro==0.18.13
 
 black
 flake8
@@ -7,10 +7,15 @@ isort
 pytest
 pytest-cov
 
+ipykernel
+
+unidecode
+numpy
 pandas
+imblearn
 
 scikit-learn
-tensorflow
+xgboost
 
 uvicorn
 
