--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,20 +4,18 @@
 #
 #    pip-compile 'src\requirements.in'
 #
-absl-py==1.4.0
-    # via
-    #   tensorboard
-    #   tensorflow-intel
 antlr4-python3-runtime==4.9.3
     # via omegaconf
 anyconfig==0.13.0
     # via kedro
 arrow==1.2.3
     # via cookiecutter
-astunparse==1.6.3
-    # via tensorflow-intel
+asttokens==2.4.0
+    # via stack-data
 attrs==23.1.0
     # via kedro
+backcall==0.2.0
+    # via ipython
 binaryornot==0.4.4
     # via cookiecutter
 black==23.9.1
@@ -27,9 +25,7 @@ build==1.0.3
     #   kedro
     #   pip-tools
 cachetools==5.3.1
-    # via
-    #   google-auth
-    #   kedro
+    # via kedro
 certifi==2023.7.22
     # via requests
 chardet==5.2.0
@@ -47,73 +43,80 @@ colorama==0.4.6
     # via
     #   build
     #   click
+    #   ipython
     #   pytest
+comm==0.1.4
+    # via ipykernel
 cookiecutter==2.3.0
     # via kedro
 coverage[toml]==7.3.1
     # via pytest-cov
+debugpy==1.8.0
+    # via ipykernel
+decorator==5.1.1
+    # via ipython
 dynaconf==3.2.3
     # via kedro
 exceptiongroup==1.1.3
-    # via pytest
+    # via
+    #   ipython
+    #   pytest
+executing==1.2.0
+    # via stack-data
 flake8==6.1.0
     # via -r src\requirements.in
-flatbuffers==23.5.26
-    # via tensorflow-intel
 fsspec==2023.9.1
     # via kedro
-gast==0.4.0
-    # via tensorflow-intel
 gitdb==4.0.10
     # via gitpython
 gitpython==3.1.36
     # via kedro
-google-auth==2.23.0
-    # via
-    #   google-auth-oauthlib
-    #   tensorboard
-google-auth-oauthlib==1.0.0
-    # via tensorboard
-google-pasta==0.2.0
-    # via tensorflow-intel
-grpcio==1.58.0
-    # via
-    #   tensorboard
-    #   tensorflow-intel
 h11==0.14.0
     # via uvicorn
-h5py==3.9.0
-    # via tensorflow-intel
 idna==3.4
     # via requests
+imbalanced-learn==0.11.0
+    # via imblearn
+imblearn==0.0
+    # via -r src\requirements.in
 importlib-metadata==6.8.0
     # via kedro
 importlib-resources==6.0.1
     # via kedro
 iniconfig==2.0.0
     # via pytest
+ipykernel==6.25.2
+    # via -r src\requirements.in
+ipython==8.15.0
+    # via ipykernel
 isort==5.12.0
     # via -r src\requirements.in
+jedi==0.19.0
+    # via ipython
 jinja2==3.1.2
     # via cookiecutter
 jmespath==1.0.1
     # via kedro
 joblib==1.3.2
-    # via scikit-learn
+    # via
+    #   imbalanced-learn
+    #   scikit-learn
+jupyter-client==8.3.1
+    # via ipykernel
+jupyter-core==5.3.1
+    # via
+    #   ipykernel
+    #   jupyter-client
 kedro==0.18.13
     # via -r src\requirements.in
-keras==2.13.1
-    # via tensorflow-intel
-libclang==16.0.6
-    # via tensorflow-intel
-markdown==3.4.4
-    # via tensorboard
 markdown-it-py==3.0.0
     # via rich
 markupsafe==2.1.3
+    # via jinja2
+matplotlib-inline==0.1.6
     # via
-    #   jinja2
-    #   werkzeug
+    #   ipykernel
+    #   ipython
 mccabe==0.7.0
     # via flake8
 mdurl==0.1.2
@@ -122,60 +125,60 @@ more-itertools==10.1.0
     # via kedro
 mypy-extensions==1.0.0
     # via black
-numpy==1.24.3
+nest-asyncio==1.5.7
+    # via ipykernel
+numpy==1.25.2
     # via
-    #   h5py
-    #   opt-einsum
+    #   -r src\requirements.in
+    #   imbalanced-learn
     #   pandas
     #   scikit-learn
     #   scipy
-    #   tensorboard
-    #   tensorflow-intel
-oauthlib==3.2.2
-    # via requests-oauthlib
+    #   xgboost
 omegaconf==2.3.0
     # via kedro
-opt-einsum==3.3.0
-    # via tensorflow-intel
 packaging==23.1
     # via
     #   black
     #   build
+    #   ipykernel
     #   pytest
     #   pytoolconfig
-    #   tensorflow-intel
 pandas==2.1.0
     # via -r src\requirements.in
 parse==1.19.1
     # via kedro
+parso==0.8.3
+    # via jedi
 pathspec==0.11.2
     # via black
+pickleshare==0.7.5
+    # via ipython
 pip-tools==7.3.0
     # via kedro
 platformdirs==3.10.0
     # via
     #   black
+    #   jupyter-core
     #   pytoolconfig
 pluggy==1.2.0
     # via
     #   kedro
     #   pytest
-protobuf==4.24.3
-    # via
-    #   tensorboard
-    #   tensorflow-intel
-pyasn1==0.5.0
-    # via
-    #   pyasn1-modules
-    #   rsa
-pyasn1-modules==0.3.0
-    # via google-auth
+prompt-toolkit==3.0.39
+    # via ipython
+psutil==5.9.5
+    # via ipykernel
+pure-eval==0.2.2
+    # via stack-data
 pycodestyle==2.11.0
     # via flake8
 pyflakes==3.1.0
     # via flake8
 pygments==2.16.1
-    # via rich
+    # via
+    #   ipython
+    #   rich
 pyproject-hooks==1.0.0
     # via build
 pytest==7.4.2
@@ -187,6 +190,7 @@ pytest-cov==4.1.0
 python-dateutil==2.8.2
     # via
     #   arrow
+    #   jupyter-client
     #   pandas
 python-slugify==8.0.1
     # via cookiecutter
@@ -194,56 +198,48 @@ pytoolconfig[global]==1.2.5
     # via rope
 pytz==2023.3.post1
     # via pandas
+pywin32==306
+    # via jupyter-core
 pyyaml==6.0.1
     # via
     #   cookiecutter
     #   kedro
     #   omegaconf
-requests==2.31.0
+pyzmq==25.1.1
     # via
-    #   cookiecutter
-    #   requests-oauthlib
-    #   tensorboard
-requests-oauthlib==1.3.1
-    # via google-auth-oauthlib
+    #   ipykernel
+    #   jupyter-client
+requests==2.31.0
+    # via cookiecutter
 rich==13.5.2
     # via
     #   cookiecutter
     #   kedro
 rope==1.9.0
     # via kedro
-rsa==4.9
-    # via google-auth
 scikit-learn==1.3.0
-    # via -r src\requirements.in
+    # via
+    #   -r src\requirements.in
+    #   imbalanced-learn
 scipy==1.11.2
-    # via scikit-learn
+    # via
+    #   imbalanced-learn
+    #   scikit-learn
+    #   xgboost
 six==1.16.0
     # via
-    #   astunparse
-    #   google-pasta
+    #   asttokens
     #   python-dateutil
-    #   tensorflow-intel
 smmap==5.0.0
     # via gitdb
-tensorboard==2.13.0
-    # via tensorflow-intel
-tensorboard-data-server==0.7.1
-    # via tensorboard
-tensorflow==2.13.0
-    # via -r src\requirements.in
-tensorflow-estimator==2.13.0
-    # via tensorflow-intel
-tensorflow-intel==2.13.0
-    # via tensorflow
-tensorflow-io-gcs-filesystem==0.31.0
-    # via tensorflow-intel
-termcolor==2.3.0
-    # via tensorflow-intel
+stack-data==0.6.2
+    # via ipython
 text-unidecode==1.3
     # via python-slugify
 threadpoolctl==3.2.0
-    # via scikit-learn
+    # via
+    #   imbalanced-learn
+    #   scikit-learn
 toml==0.10.2
     # via kedro
 tomli==2.0.1
@@ -257,28 +253,36 @@ tomli==2.0.1
     #   pytoolconfig
 toposort==1.10
     # via kedro
-typing-extensions==4.5.0
+tornado==6.3.3
+    # via
+    #   ipykernel
+    #   jupyter-client
+traitlets==5.10.0
+    # via
+    #   comm
+    #   ipykernel
+    #   ipython
+    #   jupyter-client
+    #   jupyter-core
+    #   matplotlib-inline
+typing-extensions==4.7.1
     # via
     #   black
-    #   tensorflow-intel
     #   uvicorn
 tzdata==2023.3
     # via pandas
-urllib3==1.26.16
-    # via
-    #   google-auth
-    #   requests
+unidecode==1.3.6
+    # via -r src\requirements.in
+urllib3==2.0.4
+    # via requests
 uvicorn==0.23.2
     # via -r src\requirements.in
-werkzeug==2.3.7
-    # via tensorboard
+wcwidth==0.2.6
+    # via prompt-toolkit
 wheel==0.41.2
-    # via
-    #   astunparse
-    #   pip-tools
-    #   tensorboard
-wrapt==1.15.0
-    # via tensorflow-intel
+    # via pip-tools
+xgboost==2.0.0
+    # via -r src\requirements.in
 zipp==3.16.2
     # via importlib-metadata
 
