dev: configure linters - isort, black and falke8

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,13 @@ kedro_init_version = "0.18.13"
 
 [tool.isort]
 profile = "black"
+extend_skip = [".ipython", ".git", "env", ".github"]
 
 [tool.pytest.ini_options]
 addopts = """
 --cov-report term-missing \
---cov src/text_classification -ra"""
+--ignore src/tests/tests_regression/ \
+--cov src/mlops_toolkit_project -ra"""
 
 [tool.coverage.report]
 fail_under = 0
