--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,10 +4,16 @@
 #
 #    pip-compile 'src\requirements.in'
 #
+annotated-types==0.5.0
+    # via pydantic
 antlr4-python3-runtime==4.9.3
     # via omegaconf
-anyconfig==0.13.0
+anyconfig==0.10.1
     # via kedro
+anyio==3.7.1
+    # via
+    #   fastapi
+    #   starlette
 arrow==1.2.3
     # via cookiecutter
 asttokens==2.4.0
@@ -59,10 +65,13 @@ dynaconf==3.2.3
     # via kedro
 exceptiongroup==1.1.3
     # via
+    #   anyio
     #   ipython
     #   pytest
 executing==1.2.0
     # via stack-data
+fastapi==0.103.1
+    # via -r src\requirements.in
 flake8==6.1.0
     # via -r src\requirements.in
 fsspec==2023.9.1
@@ -74,7 +83,9 @@ gitpython==3.1.36
 h11==0.14.0
     # via uvicorn
 idna==3.4
-    # via requests
+    # via
+    #   anyio
+    #   requests
 imbalanced-learn==0.11.0
     # via imblearn
 imblearn==0.0
@@ -107,7 +118,7 @@ jupyter-core==5.3.1
     # via
     #   ipykernel
     #   jupyter-client
-kedro==0.18.13
+kedro==0.18.12
     # via -r src\requirements.in
 markdown-it-py==3.0.0
     # via rich
@@ -125,9 +136,9 @@ more-itertools==10.1.0
     # via kedro
 mypy-extensions==1.0.0
     # via black
-nest-asyncio==1.5.7
+nest-asyncio==1.5.8
     # via ipykernel
-numpy==1.25.2
+numpy==1.26.0
     # via
     #   -r src\requirements.in
     #   imbalanced-learn
@@ -161,7 +172,7 @@ platformdirs==3.10.0
     #   black
     #   jupyter-core
     #   pytoolconfig
-pluggy==1.2.0
+pluggy==1.3.0
     # via
     #   kedro
     #   pytest
@@ -173,6 +184,12 @@ pure-eval==0.2.2
     # via stack-data
 pycodestyle==2.11.0
     # via flake8
+pydantic==2.3.0
+    # via
+    #   -r src\requirements.in
+    #   fastapi
+pydantic-core==2.6.3
+    # via pydantic
 pyflakes==3.1.0
     # via flake8
 pygments==2.16.1
@@ -232,8 +249,12 @@ six==1.16.0
     #   python-dateutil
 smmap==5.0.0
     # via gitdb
+sniffio==1.3.0
+    # via anyio
 stack-data==0.6.2
     # via ipython
+starlette==0.27.0
+    # via fastapi
 text-unidecode==1.3
     # via python-slugify
 threadpoolctl==3.2.0
@@ -268,6 +289,9 @@ traitlets==5.10.0
 typing-extensions==4.7.1
     # via
     #   black
+    #   fastapi
+    #   pydantic
+    #   pydantic-core
     #   uvicorn
 tzdata==2023.3
     # via pandas
