--- a/.github/workflows/application_check.yml
+++ b/.github/workflows/application_check.yml
@@ -10,7 +10,7 @@ jobs:
     name: Image Building
     runs-on: ubuntu-latest
     env:
-      REQUIREMENTS_PATH: "src/requirements.in"
+      REQUIREMENTS_PATH: "./src/requirements.in"
       ENTRYPOINT_PATH: "./entrypoint.sh"
       DOCKERFILE_PATH: "Dockerfile"
       DOCKERIMAGE_NAME: "classifier_app"
