fix: fix pytest command due a pytest_cov problem

--- a/.github/workflows/application_check.yml
+++ b/.github/workflows/application_check.yml
@@ -25,4 +25,4 @@ jobs:
     
       - name: Unitary Tests (Functions)
         run: |
-          docker run --rm --entrypoint "pytest" $DOCKERIMAGE_NAME src/tests/tests_unitary/
+          docker run --rm --entrypoint "pytest" $DOCKERIMAGE_NAME --cov=.
