fix: change the workdir of the dokerfile to the root

--- a/.github/workflows/application_check.yml
+++ b/.github/workflows/application_check.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           docker build --build-arg REQUIREMENTS_PATH=$REQUIREMENTS_PATH --build-arg ENTRYPOINT_PATH=$ENTRYPOINT_PATH  -t $DOCKERIMAGE_NAME -f $DOCKERFILE_PATH .
     
-      - name: Check unitary tests
+      - name: Check all tests
         run: |
           docker run --rm --entrypoint "pytest" $DOCKERIMAGE_NAME --cov=.
 
