--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ extend_skip = [".ipython", ".git", "env", ".github"]
 addopts = """
 --cov-report term-missing \
 --ignore src/tests/tests_regression/ \
---cov src/mlops_toolkit_project -ra"""
+--cov src/text_classification -ra"""
 
 [tool.coverage.report]
 fail_under = 0
