dev: change pytest command once pytest cov gub is fixed

--- a/.github/workflows/ci_cd_ct_workflow.yml
+++ b/.github/workflows/ci_cd_ct_workflow.yml
@@ -33,4 +33,4 @@ jobs:
     
       - name: Check all tests
         run: |
-          docker run --rm --entrypoint "pytest" $DOCKERIMAGE_NAME --cov=.
+          docker run --rm --entrypoint "pytest" $DOCKERIMAGE_NAME -v .
