fix: add installation of the project itself

--- a/.github/workflows/ci_cd_ct_workflow.yml
+++ b/.github/workflows/ci_cd_ct_workflow.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Install requirements
         run: |
           pip install --quiet --requirement src/requirements.in
+          pip install -e src/.
 
       - name: Train ML model
         run: |
