--- a/.github/workflows/ci_cd_ct_workflow.yml
+++ b/.github/workflows/ci_cd_ct_workflow.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           python-version: '3.10.5' 
 
+      - name: PRint current directory
+        run: echo pwd
+
       - name: Install requirements
         run: |
           pip install --upgrade pip
