--- a/.github/workflows/ci_cd_ct_workflow.yml
+++ b/.github/workflows/ci_cd_ct_workflow.yml
@@ -20,7 +20,7 @@ jobs:
           python-version: '3.10.5' 
 
       - name: PRint current directory
-        run: echo pwd
+        run: pwd
 
       - name: Install requirements
         run: |
