dev: change docker run command

--- a/.github/workflows/ci_cd_ct_workflow.yml
+++ b/.github/workflows/ci_cd_ct_workflow.yml
@@ -36,7 +36,7 @@ jobs:
     
       - name: Print working directory
         run: |
-          docker run --entrypoint "pwd" $DOCKERIMAGE_NAME
+          docker run --entrypoint $DOCKERIMAGE_NAME "pwd"
 
       - name: Print current directory content
         run: |
