dev: update black command in pull request checker action

--- a/.github/workflows/pull_request_check.yml
+++ b/.github/workflows/pull_request_check.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Check Black
         run: |
-          black --check .
+          black --line-length=88 --check .
 
   unit_test:
     name: Unit Test Checking
