feat: add model training to ci/cd/ct workflow

--- a/.github/workflows/ci_cd_ct_workflow.yml
+++ b/.github/workflows/ci_cd_ct_workflow.yml
@@ -20,6 +20,10 @@ jobs:
       
       - name: Check out the code
         uses: actions/checkout@v3
+
+      - name: Train ML model
+        run: |
+          kedro run --pipeline training
       
       - name: Build Docker image
         run: |
