--- a/.github/workflows/ci_cd_ct_workflow.yml
+++ b/.github/workflows/ci_cd_ct_workflow.yml
@@ -9,7 +9,7 @@ jobs:
 
   ci_cd_ct:
     name: Prediction Service Deployment
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     env:
       REQUIREMENTS_PATH: "./src/requirements.in"
       ENTRYPOINT_PATH: "./entrypoint.sh"
