fix: fix bug in requirements install from github actions

--- a/.github/workflows/ci_cd_ct_workflow.yml
+++ b/.github/workflows/ci_cd_ct_workflow.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install requirements
         run: |
-          pip install $REQUIREMENTS_PATH
+          pip install -r $REQUIREMENTS_PATH
 
       - name: Train ML model
         run: |
